src/objects/Employee_Task__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>EmployeeTasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsEmailQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmailQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipName>EmployeeTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Employee Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{00000}</displayFormat>
        <label>Employee Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>